[package]
name = "rct"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
libc = "0.2.155"
serde = "1.0.203"
serde_json = "1.0.117"
