[package]
name = "easycsv"
version = "0.2.9"
edition = "2021"
description = "A command line csv parser and toolkit for navigating and filtering data from csv files"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
grep = "0.3.1"
grep-cli = "0.1.10"
libc = "0.2.155"
serde = "1.0.203"
serde_json = "1.0.117"
